Possible fix to background not stretching on mobile

--- a/public/about.css
+++ b/public/about.css
@@ -29,6 +29,7 @@ body {
 .about {
 	font-family: 'Montserrat', sans-serif;
 	background-image: linear-gradient(135deg, #fdfcfb 0%, #e2d1c3 100%);
+	background-size: 100%;
 	position: relative;
 	width: 100%;
 	height: 100%;
